SubBt/force-app/main/default/objects/BOM_Settings__c/BOM_Settings__c.object-meta.xml
<CustomObject>
    <label>BOM Setting</label>
    <nameField>
        <label>BOM Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOM Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>