SubBt/force-app/main/default/objects/BOM_Settings__c/fields/BOM_Line_Filter_Fields__c.field-meta.xml
<CustomField>
    <fullName>BOM_Line_Filter_Fields__c</fullName>
    <label>BOM Line Filter Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>