SubBt/force-app/main/default/objects/BOM_Settings__c/fields/BOM_Line_Selected_Fileds__c.field-meta.xml
<CustomField>
    <fullName>BOM_Line_Selected_Fileds__c</fullName>
    <label>BOM Line Selected Fileds</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>