SubBt/force-app/main/default/objects/BOM_Settings__c/fields/BOM_Selected_Fields__c.field-meta.xml
<CustomField>
    <fullName>BOM_Selected_Fields__c</fullName>
    <label>BOM Selected Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>