SubBt/force-app/main/default/objects/BOM_Settings__c/fields/Product_Filter_Fields__c.field-meta.xml
<CustomField>
    <fullName>Product_Filter_Fields__c</fullName>
    <label>Product Filter Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>