SubBt/force-app/main/default/objects/BOM_Settings__c/fields/Takeoff_Filter_Fields__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Filter_Fields__c</fullName>
    <label>Takeoff Filter Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>